--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src="script.js" defer></script>
     </head>
   <body>
-    <p>Hello world.</p>
+    <div id="container"></div>
   </body>
   </html>
