Implement grid drawing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="script.js" defer></script>
     </head>
   <body>
-    <div id="container"></div>
+    <div class="ui">
+      <button id="sizeButton">New Grid</button>
+    </div>
+    <div id="gridContainer"></div>
   </body>
   </html>
