--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
   <body>
     <div class="ui">
-      <button id="sizeButton">New Grid</button>
+      <button id="sizeButton">Generate New Grid</button>
     </div>
     <div id="gridContainer"></div>
   </body>
